--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/button": "^1.4.5",
+    "@chakra-ui/icons": "^1.0.16",
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "framer-motion": "^4.1.17",
     "next": "12.0.1",
+    "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
