--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.0.1",
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
