--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "three": "^0.134.0",
+    "three-voxel-loader": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
